[tool.poetry]
name = "world-system"
version = "0.1.0"
description = ""
authors = ["douglas-m-harvey <douglas_harvey@tiscali.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
